src/frontend/angular/kubernetes-manifests/angular-frontend.service.yaml
# This Service manifest defines:
# - a load balancer for pods matching label "app: angular-hello-world"
# - exposing the application to the public Internet (type:LoadBalancer)
# - routes port 80 of the load balancer to the port 8080 of the Pods.
# Syntax reference https://kubernetes.io/docs/concepts/configuration/overview/
apiVersion: v1
kind: Service
metadata:
  name: angular-frontend
  labels:
    app: angular
    tier: frontend
spec:
  type: LoadBalancer
  selector:
    app: angular
    tier: frontend
  ports:
  - port: 80
    targetPort: 8080
