src/frontend/angular/kubernetes-manifests/angular-frontent.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: angular-frontend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: angular-frontend
  rules:
  - host: angular-frontend.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: angular-frontend
            port:
              number: 80
